# IR_model

./: README.md  pyproject.toml  requirements.txt
doc/: model.md  result.md
irmodel/: __init__.py
irmodel/data/: data_fetcher.py
irmodel/model/: BaseModel.py  CIR.py  Hull_White.py  Vasicek.py  __init__.py
scripts/: CIR_analysis.py  HullWhite_Analysis.py  Vasicek_Analysis.py  ~
